--- a/views/testam.ejs
+++ b/views/testam.ejs
@@ -5,10 +5,27 @@
             class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
 </div>
 
-
-
+<% if (Object.values(sess).length === 0) {%>
+    <p>로그인이 되어있지 않습니다.</p>
+    <p>로그인 후 데이터를 가져올 수 있습니다.</p>
+<% } else {%>
+    <table border="1">
+        <colgroup>
+            <col width="50px" />
+            <col width="150px" />
+            <col width="400px" />
+        </colgroups>
+        <% for (var row of data) { %> 
+        <tr>
+            <td><%= row.id %></td>
+            <td><%= row.title %></td>
+            <td><%= row.content %></td>
+        </tr>
+        <% } %> 
+    </table>
+<%
+} %> 
 <div class="row">
-
     <!-- Area Chart -->
     <div class="col-xl-12 col-lg-4">
         <div class="card shadow mb-4">
