--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -51,7 +51,7 @@
 
             <!-- Nav Item - Ideas -->
             <li class="nav-item">
-                <a class="nav-link" href="/ideas">
+                <a class="nav-link" href="/testam">
                     <i class="far fa-copy"></i>
                     <span>Ideas(지수 작업중)</span></a>
             </li>
