--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -115,6 +115,8 @@
     </div>
 
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <!-- Core plugin JavaScript-->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
