--- a/views/main.ejs
+++ b/views/main.ejs
@@ -128,7 +128,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">우리와 같이 하는 사람들</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">같이 하는 사람들</h6>
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card-body">
